version/0.70/_sources/autoapi/pyedb/generic/settings/Settings.rst.txt






:class:`Settings`
=================


.. py:class:: pyedb.generic.settings.Settings

   Bases: :py:obj:`object`


   
   Manages all PyEDB environment variables and global settings.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Settings

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~retry_n_times_time_interval`
            - Time interval between the retries by the ``_retry_n_times`` method.
          * - :py:attr:`~is_grpc`
            - Whether Edb is launched using grpc or not.
          * - :py:attr:`~edb_environment_variables`
            - Environment variables that are set before launching a new AEDT session,
          * - :py:attr:`~aedt_version`
            - AEDT version in the form ``"2023.x"``. In AEDT 2022 R2 and later,
          * - :py:attr:`~global_log_file_size`
            - Global PyEDB log file size in MB. The default value is ``10``.
          * - :py:attr:`~enable_global_log_file`
            - Flag for enabling and disabling the global PyEDB log file located in the global temp folder.
          * - :py:attr:`~enable_local_log_file`
            - Flag for enabling and disabling the local PyEDB log file located
          * - :py:attr:`~global_log_file_name`
            - Global PyEDB log file path. The default is ``pyedb_username.log``.
          * - :py:attr:`~enable_debug_methods_argument_logger`
            - Flag for whether to write out the method's arguments in the debug logger.
          * - :py:attr:`~enable_error_handler`
            - Flag for enabling and disabling the internal PyEDB error handling.
          * - :py:attr:`~enable_file_logs`
            - Flag for enabling and disabling the logging to a file.
          * - :py:attr:`~enable_logger`
            - Flag for enabling and disabling the logging overall.
          * - :py:attr:`~logger_file_path`
            - PyEDB log file path.
          * - :py:attr:`~logger_formatter`
            - Message format of the log entries.
          * - :py:attr:`~logger_datefmt`
            - Date format of the log entries.
          * - :py:attr:`~enable_debug_edb_logger`
            - Flag for enabling and disabling the logger for any EDB API methods.
          * - :py:attr:`~enable_debug_internal_methods_logger`
            - Flag for enabling and disabling the logging for internal methods.
          * - :py:attr:`~enable_debug_logger`
            - Flag for enabling and disabling the debug level logger.
          * - :py:attr:`~enable_screen_logs`
            - Flag for enabling and disabling the logging to STDOUT.
          * - :py:attr:`~edb_dll_path`
            - Optional path for the EDB DLL file.
          * - :py:attr:`~aedt_installation_path`
            - 


   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CURRENT_STABLE_AEDT_VERSION`
            - 
          * - :py:attr:`~INSTALLED_VERSIONS`
            - 
          * - :py:attr:`~INSTALLED_STUDENT_VERSIONS`
            - 
          * - :py:attr:`~INSTALLED_CLIENT_VERSIONS`
            - 
          * - :py:attr:`~LATEST_VERSION`
            - 
          * - :py:attr:`~LATEST_STUDENT_VERSION`
            - 
          * - :py:attr:`~specified_version`
            - 
          * - :py:attr:`~is_student_version`
            - 
          * - :py:attr:`~remote_rpc_session`
            - 
          * - :py:attr:`~pyedb_server_path`
            - 
          * - :py:attr:`~formatter`
            - 
          * - :py:attr:`~time_tick`
            - 
          * - :py:attr:`~logger`
            - 
          * - :py:attr:`~log_file`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.generic.settings import Settings

Property detail
---------------

.. py:property:: retry_n_times_time_interval

   
   Time interval between the retries by the ``_retry_n_times`` method.
















   ..
       !! processed by numpydoc !!

.. py:property:: is_grpc

   
   Whether Edb is launched using grpc or not.





   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: edb_environment_variables

   
   Environment variables that are set before launching a new AEDT session,
   including those that enable the beta features.
















   ..
       !! processed by numpydoc !!

.. py:property:: aedt_version

   
   AEDT version in the form ``"2023.x"``. In AEDT 2022 R2 and later,
   evaluating a bounding box by exporting a SAT file is disabled.
















   ..
       !! processed by numpydoc !!

.. py:property:: global_log_file_size

   
   Global PyEDB log file size in MB. The default value is ``10``.
















   ..
       !! processed by numpydoc !!

.. py:property:: enable_global_log_file

   
   Flag for enabling and disabling the global PyEDB log file located in the global temp folder.
   The default is ``True``.
















   ..
       !! processed by numpydoc !!

.. py:property:: enable_local_log_file

   
   Flag for enabling and disabling the local PyEDB log file located
   in the ``projectname.pyedb`` project folder. The default is ``True``.
















   ..
       !! processed by numpydoc !!

.. py:property:: global_log_file_name

   
   Global PyEDB log file path. The default is ``pyedb_username.log``.
















   ..
       !! processed by numpydoc !!

.. py:property:: enable_debug_methods_argument_logger

   
   Flag for whether to write out the method's arguments in the debug logger.
   The default is ``False``.
















   ..
       !! processed by numpydoc !!

.. py:property:: enable_error_handler

   
   Flag for enabling and disabling the internal PyEDB error handling.
















   ..
       !! processed by numpydoc !!

.. py:property:: enable_file_logs

   
   Flag for enabling and disabling the logging to a file.
















   ..
       !! processed by numpydoc !!

.. py:property:: enable_logger

   
   Flag for enabling and disabling the logging overall.
















   ..
       !! processed by numpydoc !!

.. py:property:: logger_file_path

   
   PyEDB log file path.
















   ..
       !! processed by numpydoc !!

.. py:property:: logger_formatter

   
   Message format of the log entries.
   The default is ``'%(asctime)s:%(destination)s:%(extra)s%(levelname)-8s:%(message)s'``
















   ..
       !! processed by numpydoc !!

.. py:property:: logger_datefmt

   
   Date format of the log entries.
   The default is ``'%Y/%m/%d %H.%M.%S'``
















   ..
       !! processed by numpydoc !!

.. py:property:: enable_debug_edb_logger

   
   Flag for enabling and disabling the logger for any EDB API methods.
















   ..
       !! processed by numpydoc !!

.. py:property:: enable_debug_internal_methods_logger

   
   Flag for enabling and disabling the logging for internal methods.
   This setting is useful for debug purposes.
















   ..
       !! processed by numpydoc !!

.. py:property:: enable_debug_logger

   
   Flag for enabling and disabling the debug level logger.
















   ..
       !! processed by numpydoc !!

.. py:property:: enable_screen_logs

   
   Flag for enabling and disabling the logging to STDOUT.
















   ..
       !! processed by numpydoc !!

.. py:property:: edb_dll_path

   
   Optional path for the EDB DLL file.
















   ..
       !! processed by numpydoc !!

.. py:property:: aedt_installation_path



Attribute detail
----------------

.. py:attribute:: CURRENT_STABLE_AEDT_VERSION
   :value: 2025.2


.. py:attribute:: INSTALLED_VERSIONS
   :value: None


.. py:attribute:: INSTALLED_STUDENT_VERSIONS
   :value: None


.. py:attribute:: INSTALLED_CLIENT_VERSIONS
   :value: None


.. py:attribute:: LATEST_VERSION
   :value: None


.. py:attribute:: LATEST_STUDENT_VERSION
   :value: None


.. py:attribute:: specified_version
   :value: None


.. py:attribute:: is_student_version
   :value: False


.. py:attribute:: remote_rpc_session
   :value: False


.. py:attribute:: pyedb_server_path
   :value: ''


.. py:attribute:: formatter
   :value: None


.. py:attribute:: time_tick

.. py:attribute:: logger
   :value: None


.. py:attribute:: log_file
   :value: None






